# see https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name= sensor2mqtt
version = 1.0.0
description = Sensor2MQTT Library
url = https://github.com/lbt/python-sensor2mqtt
author = David Greaves
author_email = david@dgreaves.com
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GPLv3 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
project_urls =
    Documentation = https://
    Source = https://
    Tracker = https://

[options]
packages = sensor2mqtt
#package_dir =
#	 =sensor2mqtt
include_package_data = True
install_requires =
    toml
    gmqtt
    gpiozero
    RPi.GPIO
    smbus2

python_requires = >=3.7

[aliases]
test=pytest

[options.extras_require]
test =
    pytest         >= 6.2.2
    pytest-asyncio >= 0.14.0
    pytest-django  >= 4.1.0
    pytest-mock    >= 3.5.1
    pytest-qt      >= 3.3.0
    #    pycodestyle
    #	 pytest-cov
    flake8
    pylint
    isort
    mypy
all =
    %(test)s
